# mmpp

./: .buildinfo  .flake8  .gitignore  CONTRIBUTING.md  DEPENDENCY_FIX_COMPLETE.md  DEVELOPMENT.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_FIXES_COMPLETE.md  FINALNE_PODSUMOWANIE_FFT.md  GITHUB_PAGES_SETUP.md  README.html  README.md  RELEASE_NOTES.md  SMART_LEGEND_DOCS.md  build_docs.sh  debug_attributes.py  example_smart_legend.py  fix_imports.py  genindex.html  index.html  justfile  main.py  mp  objects.inv  plotting.py  py-modindex.html  pyproject.toml  quick_test.py  search.html  searchindex.js  setup.py  swapper.py  test.ipynb  test.py  test_fft_infrastructure.py  test_fft_progress.py  test_fft_save.py  test_font_loading.py  test_import.py  test_integration.py  (+2 more)
.doctrees/: README.doctree  index.doctree
.doctrees/api/: index.doctree
.github/: dependabot.yml
_modules/: index.html
api/: batch_operations.html  core.html  index.html  logging_config.html  plotting.html  simulation.html
docs/: conf.py  index.md
mmpp/: __init__.py  auth.py  batch_operations.py  cli.py  core.py  logging_config.py  plotting.py  simulation.py
scripts/: bump_version.py
tests/: __init__.py  colorbar_examples.py  colorbar_integration.py  debug_attributes.py  debug_legend.py  example_smart_legend.py  optimized_colorbar.py  quick_test.py  test.py  test_api.py  test_basic.py  test_batch_operations.py  test_colorbar.py  test_comprehensive.py  test_dark_logging.py  test_dynamic_title.py  test_enhanced_interactive.py  test_exact_usage.py  test_fft_infrastructure.py  test_fft_progress.py  test_fft_repr.py  test_fft_save.py  test_fft_styling.py  test_filtering.py  test_fmr_modes.py  test_font_loading.py  test_import.py  test_improved_animations.ipynb  test_improved_dark_colors.py  test_integration.py  test_legend_variables.py  test_logging.py  test_logging_simple.py  test_mmpp_logging.py  test_mode_animations.ipynb  test_plot_spectrum.py  test_quick_fonts.py  test_repr_and_animations.py  test_setup.py  test_silent_plotting.py  (+1 more)
tutorials/: batch_operations.html  examples.html  getting_started.html  index.html
(+53 files in other folders)
