[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mmpp"
version = "0.1.0"
authors = [
    {name = "Mateusz Zelent", email = "mateusz.zelent@amu.edu.pl"}
]
description = "A library for MMPP2 (Micro Magnetic Post Processing) simulation and analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "pyzfn",
    "zarr",
    "rich",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine",
]
interactive = [
    "itables",
    "IPython",
    "jupyter",
]
plotting = [
    "cmocean",
]

[project.urls]
Homepage = "https://github.com/yourusername/mmpp2"
Repository = "https://github.com/yourusername/mmpp2"
Issues = "https://github.com/yourusername/mmpp2/issues"

[project.scripts]
mmpp = "mmpp.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
mmpp = ["paper.mplstyle", "fonts/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
